# 100DaysOfDataScience

./: .gitignore  README.md  pylintrc  pyproject.toml
IMDB/: README.md
IMDB/IMDB/: items.py  pipelines.py  settings.py
IMDB/IMDB/spiders/: movies_series_data.py
IMDB/data/: imdb.csv
QuoteGuessingGame/: pyproject.toml
QuoteGuessingGame/src/QuoteGuessingGame/: items.py  scraper.py
