[project]
name = "quoteguessinggame"
version = "0.1.0"
description = "this projected is meant for practicing data science with python"
authors = [
    {name = "Sadra Hosseini",email = "sadrahosseini98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "scrapy (>=2.12.0,<3.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "scrapy-playwright (>=0.0.43,<0.0.44)",
    "playwright (>=1.50.0,<2.0.0)",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "matplotlib>=3.10.1",
    "jupyter>=1.1.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
