[project]
name = "quoteguessinggame"
version = "0.1.0"
description = ""
authors = [
    {name = "Sadra Hosseini",email = "sadrahosseini98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "yapf (>=0.43.0,<0.44.0)",
    "mypy (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
